Back home text uppercase

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>404</h1>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem ipsum dolor.</p>
-            <a href="#">back home</a>
+            <a href="#">BACK HOME</a>
         </div>
     </div>
 </body>
