Style file, main image

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Serlokas</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div>
-        <img src="" alt="Serlokas">
+    <main>
+        <img src="serlokas.png" alt="Serlokas">
         <div>
             <h1>404</h1>
             <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor.</p>
-            <a href="#">BACK HOME</a>
+            <p style="font-size: 20px;">Lorem ipsum dolor.</p>
+            <a href="#">back home</a>
         </div>
-    </div>
+    </main>
 </body>
 </html>
