--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <img src="serlokas.png" alt="Serlokas">
         <div>
             <h1>404</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p style="font-size: 20px;">Lorem ipsum dolor.</p>
-            <a href="#">back home</a>
+            <p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
+            <p style="font-size: 20px;">Meanwhile, why don't try again by going</p>
+            <a href="#">Back home</a>
         </div>
     </main>
 </body>
