--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <h1>404</h1>
             <p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
-            <p style="font-size: 20px;">Meanwhile, why don't try again by going</p>
+            <p style="font-size: 20px; color: grey;">Meanwhile, why don't try again by going</p>
             <a href="#">Back home</a>
         </div>
     </main>
